# wagl

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENCE.md  MANIFEST.in  Makefile  Makefile.platform  README.md  docker-compose.yml  luigi.cfg  modules.txt  process.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  ula3_pbs.py
.circleci/: Dockerfile  config.yml  environment.yml
.docker/: Dockerfile
ULA3/: IDL_Histogram.f90  IDL_functions.py  Makefile  __init__.py  _execute.py  _gdal_tools.py  blrb.py  brdf_terrain_newdiff_all.f90  brdf_terrain_newdiff_all_LS8.f90  brdf_terrain_newdiff_all_byte1.f90  cal_angles.f90  cal_pole.f90  cal_track.f90  calculate_angles.py  filter.f90  filter_float.f90  geo_pix_size.f90  get_proj_shadows.f90  meta.py  modtran.py  pixelsize.f90  read_array_int16.f90  read_array_int8.f90  set_borderf.f90  set_satmod.f90  setup.py  shade_main_landsat_pixel.f90  slope_pixelsize_newpole.f90  solar.py  tc.py  terrain_correction.f90  utils.py  white_sky.f90
configs/: logging.cfg  luigi.cfg  multifile_example.cfg  singlefile_example.cfg
data/: landsat5_vsir.flt  landsat8_vsir.flt
docs/: Makefile  build-sphinx.sh  make_doc.bat
env_tests/: test_modtran.py  test_modtran_json_format.py
fortran/: Makefile  Makefile.ifort  angle_ortho_bin.f  binear_ortho.f  brdf_sim_bin.f  brdf_sim_bin_LS8.f  input_modtran_ortho.f  input_modtran_ortho_ula.f  read_flx_ga.f  read_flx_ga_trans.f  read_modtran.f  read_modtrancor_ortho.f  refort_tp5_ga.f  refort_tp5_ga_trans.f
gaip/: GriddedGeoBox.py  Makefile  __init__.py  _version.py  acca_cloud_masking.py  acquisition.py  ancillary.py  angle_all.f90  aot_converter.py  bilinear_interpolation.f90  black_sky.f90  brdf.py  brdf_shape.f90  cal_track.f90  calculate_angles.py  calculate_incident_exiting_angles.py  calculate_lon_lat_arrays.py  calculate_reflectance.py  calculate_self_shadow.py  calculate_shadow_masks.py  calculate_slope_aspect.py  cast_shadow.py  cast_shadow_main.f90  cloud_shadow_masking.py  constants.py  constants_NSWC.f90  contiguity_masking.py  core.py  data.py  datasets.xml  dsm.py  endmembers.py  exiting_angle.f90  fast_cache.py  fc_utils.py  fmask_cloud_masking.py  fmask_cloud_masking_wrapper.py  geo2metres_pixel_size.f90  geobox.py  geod2geo.f90  (+64 more)
image_processor/: __init__.txt  fc.txt  get_input_datasets.py  nbar.txt  pqa.txt  sm.txt  tc.txt
module/: package-module.sh
scripts/: aot_converter.py  gaip_convert.py  test_calculate_angles.py  test_dsm.py  test_exiting_angles.py  test_incident_angles.py  test_relative_slope.py  test_shadow_masks.py  test_slope_aspect.py
src/: GtifMosaic.h  GtifUtil.c  GtifUtil.h  HdfExtractor.c  JpegUtil.c  JpegUtil.h  Makefile  ancillary_geotiff_loader.c  aot_converter.py  aot_loader.c  bilinear_interpolation.f  bin2jpg.c  bin2jpg.h  binear_ortho.f  brdf_sim_bin_odps.f  brdf_sim_bin_slc.f  coefficient.f  extractDemHeight.c  extractOzone.c  extractOzone.h  extractVapour.c  extractVapour.h  hdf_extractor.c  hdf_test_l.c  read_flux_transmittance.f  read_flx_ga.f  read_modtrancor_ortho.f
test/: TestEndMembers.py  albedo-files.txt  clean.nbar  clean.pqa  clean_fc.sh  clean_tc.sh  compare_bands.py  mock.sh  mocktest_tc.pbs  run-compare.bash  test.fc  test.nbar  test.pqa  test.tc  test_acquisition.py  test_acquisition_nbar.py  (+10 more)
(+535 files in other folders)
